* #content: 新增子弹/玩家/敌机碰撞及受伤死亡逻辑 #time: 4h

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -5,5 +5,28 @@
       "height": 850,
       "width": 480
     }
+  },
+  "custom_joint_texture_layouts": [],
+  "physics": {
+    "collisionGroups": [
+      {
+        "index": 1,
+        "name": "enemy"
+      },
+      {
+        "index": 2,
+        "name": "player"
+      },
+      {
+        "index": 3,
+        "name": "bullet"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 0,
+      "1": 12,
+      "2": 2,
+      "3": 2
+    }
   }
 }
