--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -20,13 +20,18 @@
       {
         "index": 3,
         "name": "bullet"
+      },
+      {
+        "index": 4,
+        "name": "reward"
       }
     ],
     "collisionMatrix": {
       "0": 0,
       "1": 12,
-      "2": 2,
-      "3": 2
+      "2": 18,
+      "3": 2,
+      "4": 4
     }
   }
 }
