* #content: 新增炸弹数量、生命值、得分等UI逻辑开发 #time: 2h

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -33,5 +33,15 @@
       "3": 2,
       "4": 4
     }
-  }
+  },
+  "layer": [
+    {
+      "name": "GAME",
+      "value": 1
+    },
+    {
+      "name": "UI",
+      "value": 2
+    }
+  ]
 }
