* #content: 难度调整、炸弹使用、音乐逻辑开发 #time: 4h

--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,7 +3,9 @@
   "general": {
     "designResolution": {
       "height": 850,
-      "width": 480
+      "width": 480,
+      "fitHeight": true,
+      "fitWidth": true
     }
   },
   "custom_joint_texture_layouts": [],
